# image-processor

./: .tester.json  CMakeLists.txt  README.md  main.cpp
filters/: CropFilter.cpp  CropFilter.h  CrystallizeFilter.cpp  CrystallizeFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  FilterBase.cpp  FilterBase.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  NegativeFilter.cpp  NegativeFilter.h  SharpeningFilter.cpp  SharpeningFilter.h
image/: Color.cpp  Color.h  Image.cpp  Image.h
parse/: Parser.cpp  Parser.h
pipeline/: Pipeline.cpp  Pipeline.h
read_and_write/: BMPprocessor.cpp  BMPprocessor.h
